Fixed style to deal with screen jumping on large screens

--- a/src/style/scss/_containers.scss
+++ b/src/style/scss/_containers.scss
@@ -1,5 +1,5 @@
 .mainContainer {
-    width: 100%;
+    margin: 0 auto;
     min-height: 100vh;
     display: grid;
     grid-template-columns: 1fr;
@@ -7,9 +7,12 @@
 }
 
 .contentContainer {
-    @include wrap;
+    width: 100%;
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 250px 1fr;
     text-align: center;
+    @media (min-width: 1200px) {
+        @include wrap;
+    }
 }
