--- a/src/style/scss/_mixins.scss
+++ b/src/style/scss/_mixins.scss
@@ -22,5 +22,5 @@
 
 @mixin wrap {
     margin: 0 auto;
-    width: 100%;
+    width: 95%;
 }
