--- a/src/style/scss/_search.scss
+++ b/src/style/scss/_search.scss
@@ -47,14 +47,17 @@
 
 .searchForm--mini {
     position: fixed;
-    top: 0;
     width: 100%;
+    top: 0;
     background-color: $dark-color;
     border-color: $font-color;
     border-bottom-left-radius: 50px;
     border-bottom-right-radius: 50px;
     transition: 0.5s;
     z-index: 2;
+    @media (min-width: 1200px) {
+        @include wrap;
+    }
 }
 
 
